# ECE383-Final-Project

./: .gitignore  README.md  amplitude_coeffs.npy  frequency_coeffs.npy  frequency_coeffs_local.npy  package.xml  results_summary_tables.xlsx  setup.cfg  setup.py
bartender_arm/: __init__.py  dynamics.py  kinematics.py  optimizer.py  trajectory.py
bartender_arm/nodes/: metrics_subscriber_node.py  trajectory_publisher_node.py
config/: robot_params.yaml
launch/: optimization.launch.py  simulation.launch.py
rviz/: bartender_arm.rviz
scripts/: metrics_subscriber_node.py  run_optimization.py  trajectory_publisher_node.py
