<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bartender_arm</name>
  <version>0.1.0</version>
  <description>
    Mixing trajectory optimization for the Kinova Gen3 Lite 6-DOF robot arm.
    ECE383 Final Project — Dynamic Trajectory Optimization for Bartender Robot Arm.
    Implements full rigid-body dynamics (Recursive Newton-Euler), Fourier-series
    trajectory parameterization, and SLSQP constrained optimization.
  </description>
  <maintainer email="student@example.com">ECE383 Student</maintainer>
  <license>MIT</license>

  <!-- Build tools -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 core dependencies -->
  <depend>rclpy</depend>
  <depend>trajectory_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- Kortex dependencies (simulation URDF + launch files) -->
  <exec_depend>kortex_description</exec_depend>
  <exec_depend>kortex_bringup</exec_depend>

  <!-- Launch infrastructure -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Python package dependencies (installed via pip, not rosdep) -->
  <!-- numpy, scipy, matplotlib, pyyaml -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
